Front end folder added

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 .DS_Store
+.gitignore
+/node_modules
+./backend/.env.development
+.env.development
+/backend/.env.development
+/frontend/.env.production
+/frontend/.netlify/
+/.vscode
+frontend/.env.production
+frontend/.netlify/
